--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ htmlcov/
 .coverage
 .pytest_cache/
 db.sqlite3
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
